[package]
name = "opaque-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libsodium-sys-stable = { workspace = true }
ml-kem = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4"
criterion = { workspace = true }

[[bench]]
name = "bench_micro"
harness = false
